--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -4,6 +4,7 @@
   <title>BoxA</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
+  <link href="http://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <base target="_blank">
   <script type="text/javascript">
   			if (/(iPhone|iPad|iPod|iOS)/i.test(navigator.userAgent)) {
