--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -75,7 +75,8 @@
           .bar1 input {
               border: 2px solid #7BA7AB;
               border-radius: 5px;
-              background: #F9F0DA;
+              /*background: #F9F0DA;*/
+              background: #00000010;
               color: #9E9C9C;
           }
           .bar1 button {
