--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -248,5 +248,7 @@
       updateSelected()
     }
   </script>
+<!-- 加速 -->
+  <script src="//instant.page/5.0.1" type="module" integrity="sha384-0DvoZ9kNcB36fWcQApIMIGQoTzoBDYTQ85e8nmsfFOGz4RHAdUhADqJt4k3K2uLS"></script>
 </body>
 </html>
