--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -181,12 +181,12 @@
       txtURL.value = err
     }
 
-    selNode.onchange = function() {
-      const item = this.options[this.selectedIndex]
-      const node = item.value
-      conf.node_default = node
-      sendMsgToSw(PAGE_CONF_SET, conf)
-    }
+    //selNode.onchange = function() {
+     // const item = this.options[this.selectedIndex]
+    //  const node = item.value
+    //  conf.node_default = node
+    //  sendMsgToSw(PAGE_CONF_SET, conf)
+   // }
 
     function sendMsgToSw(cmd, val) {
       const ctl = sw.controller
@@ -211,15 +211,15 @@
         //     ['blogger', ''],
         // ]
 
-    function showIcons() {
-      list.innerHTML = SITE_LIST.map(v => {
-        let [id, url] = v
-        url = url || `www.${id}.com/`
-        return `\
-<a rel="noopener noreferrer" href=./-----https://${url}>\
-<img width=128 height=128 src=__sys__/assets/ico/${id}.png></a>`
-      }).join('')
-    }
+   // function showIcons() {
+   //   list.innerHTML = SITE_LIST.map(v => {
+   //     let [id, url] = v
+    //    url = url || `www.${id}.com/`
+    //    return `\
+//<a rel="noopener noreferrer" href=./-----https://${url}>\
+//<img width=128 height=128 src=__sys__/assets/ico/${id}.png></a>`
+ //     }).join('')
+  //  }
 
     function addNodeItem(id, text) {
       const optEl = document.createElement('option')
