--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -171,7 +171,7 @@
 
       case SW_READY:
         console.log('sw ready')
-        showIcons()
+        //showIcons()
         sendMsgToSw(PAGE_CONF_GET)
         break
       }
