--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -171,7 +171,7 @@
 
       case SW_READY:
         console.log('sw ready')
-        //showIcons()
+        showIcons()
         sendMsgToSw(PAGE_CONF_GET)
         break
       }
@@ -197,19 +197,19 @@
       ctl.postMessage([cmd, val])
     }
 
-     const SITE_LIST = [
-             ['google', ''],
-             ['youtube', ''],
-             ['twitter', 'twitter.com/google'],
-           ['flickr', ''],
-             ['quora', 'www.quora.com/topic/JavaScript-programming-language'],
-             ['twitch', 'www.twitch.tv/'],
-             ['reddit', ''],
-             ['wiki', 'zh.wikipedia.org/'],
-             ['gist', 'gist.github.com/'],
-             ['facebook', 'facebook.com/Google/'],
-             ['blogger', ''],
-         ]
+    //  const SITE_LIST = [
+    //          ['google', ''],
+    //          ['youtube', ''],
+    //          ['twitter', 'twitter.com/google'],
+			 // ['flickr', ''],
+    //          ['quora', 'www.quora.com/topic/JavaScript-programming-language'],
+    //          ['twitch', 'www.twitch.tv/'],
+    //          ['reddit', ''],
+    //          ['wiki', 'zh.wikipedia.org/'],
+    //          ['gist', 'gist.github.com/'],
+    //          ['facebook', 'facebook.com/Google/'],
+    //          ['blogger', ''],
+    //      ]
 
     function showIcons() {
       list.innerHTML = SITE_LIST.map(v => {
