--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -108,22 +108,39 @@
               font-size: 16px;
               color: #F9F0DA;
           }
-		  	h2{
-		  		background: linear-gradient(to right, red, blue);
-		  		-webkit-background-clip: text;
-		  		color: transparent;
-				font-size: 2.0rem;
-		  	}
+	  h2{
+	     background: linear-gradient(to right, red, blue);
+	     -webkit-background-clip: text;
+	     color: transparent;
+	     font-size: 2.0rem;
+	}
+	 .version{
+	position: absolute;
+	bottom: 0;
+	float: left;
+	}
+	.version a{
+	text-decoration: none;
+	color: #ff0000;
+	font-size: 0.7rem;
+	}
+	.version span{
+	font-size: 0.5rem;
+	}
       </style>
   </head>
   <body>
       <div class="search bar1">
 		  <h2 id="titleText" onmouseover="timer()" onmouseout="timer()"></h2>
           <section>
-              <input id="txtURL" type="text" placeholder="eg:www.example.com" autofocus="">
+              <input id="txtURL" type="text" placeholder="Search" autofocus="">
               <button id="btnGo" type="submit"></button>
           </section>
       </div>
+	  <div class="version">
+		  <span>临时升级链接:</span>
+	  	<a href="https://minibox.tk/update/download/BoxA.apk">V1.0.6</a>
+	  </div>
   <script>
     const PAGE_CONF_SET = 110
     const PAGE_CONF_GET = 111
