--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -155,7 +155,8 @@
 		  <div class="app">
 		  	<img src="https://tk.jkgblog.com/images/2020/07/21/boxa.png">
 		  </div>
-		  <span id="download"><i class="fa fa-chevron-right"></i><span class="text_">--下载最新版本--</span></span>
+		  
+		  <!-- <span id="download"><i class="fa fa-chevron-right"></i><span class="text_">--下载最新版本--</span></span> -->
 	  </div>
 	  <!-- 扫码下载jQuery -->
 	  <script type="text/javascript">
