--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
   <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-  <script src="assets/js"></script>
   
+  <!-- <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js" type="text/javascript" charset="utf-8"></script> -->
   <base target="_blank">
   <script type="text/javascript">
 	  function Time() {
