--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -155,6 +155,12 @@
               <button id="btnGo" type="submit"></button>
           </section>
       </div>
+	  <div class="box">
+    <span>切换线路:</span>
+    <select id="selNode"></select>
+  </div>
+  <div class="box" id="list">
+  </div>
 	  <!-- 扫码下载代码 -->
 	  <div class="version">
 		  <div class="app">
