--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -144,6 +144,12 @@
 				margin-left: 20px;
 				font-family: "arial narrow";
 			}
+	      .box {
+      margin-top: 1em;
+    }
+	      #list a {
+      margin: 1em;
+    }
       </style>
   </head>
   <body>
