--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -158,7 +158,7 @@
 	  <!-- 扫码下载代码 -->
 	  <div class="version">
 		  <div class="app">
-		  	<img src="https://tk.jkgblog.com/images/2020/07/21/boxa.png">
+		  	<img src="https://tk.jkgblog.com/images/2020/07/26/1.0.9.png">
 		  </div>
 		  
 		  <span id="download"><i class="fa fa-chevron-right"></i><span class="text_">--下载最新版本--</span></span>
