--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -32,6 +32,7 @@
   			// 	alert("禁止访问！");
   			// window.location.href ="https://jkgblog.com";
         // };
+        console.log("%cPower by jkgblog.com"," text-shadow: 0 1px 0 #ccc,0 2px 0 #c9c9c9,0 3px 0 #bbb,0 4px 0 #b9b9b9,0 5px 0 #aaa,0 6px 1px rgba(0,0,0,.1),0 0 5px rgba(0,0,0,.1),0 1px 3px rgba(0,0,0,.3),0 3px 5px rgba(0,0,0,.2),0 5px 10px rgba(0,0,0,.25),0 10px 10px rgba(0,0,0,.2),0 20px 20px rgba(0,0,0,.15);font-size:2rem")
   		</script>
       <style>
           * {
@@ -303,7 +304,7 @@
       optEl.id = '--' + id
       optEl.text = text
       optEl.value = id
-      selNode.appendChild(optEl)
+      // selNode.appendChild(optEl)
     }
 
     function updateSelected() {
@@ -319,7 +320,7 @@
     function showConf() {
       for (const [id, node] of Object.entries(conf.node_map)) {
         if (!node.hidden) {
-          addNodeItem(id, node.label)
+          // addNodeItem(id, node.label)
         }
       }
       updateSelected()
