--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -313,7 +313,7 @@
       if (item) {
         item.selected = true
       } else {
-        console.warn('unknown node:', id)
+        // console.warn('unknown node:', id)
       }
     }
 
