--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -8,8 +8,7 @@
   <meta name="keywords" content="VPN,v2ray,trojan,wireguard,快速的公共节点,免费节点分享">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
   <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-  <script src="./ico/jquery.min.js" type="text/javascript"
-    charset="utf-8"></script>
+  <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <base target="_blank">
   <script type="text/javascript">
     function Time() {
