--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -23,8 +23,7 @@
         console.log(element);
         console.clear();
         if (checkStatus == 'on') {
-          // alert('你在玩火，再见！')
-          // window.location.href = 'https://jkgblog.com'
+          window.location.href = 'https://jkgblog.com'
         }
       }, 1000)
     }
@@ -357,8 +356,8 @@
   </div>
   <!-- copyright -->
   <div class="footer-copyright">
-    <div>©2019-2020 | <a href="https://jkgblog.com" target="_blank">https://jkgblog.com</a></div>
-    <div>特别赞助：<a href="https://cdn.mfyidc.com/" target="_blank" rel="noopener noreferrer"> 蜜蜂云免费CDN</a></div>
+    <div>©2019-2020 | <a href="https://jkgblog.com" target="_blank" title="站长博客">https://jkgblog.com</a></div>
+    <div>特别赞助：<a href="https://cdn.mfyidc.com/" target="_blank" rel="noopener noreferrer" title="蜜蜂云免费CDN"> 蜜蜂云免费CDN</a></div>
   </div>
   <!-- 扫码下载代码 -->
   <!-- <div class="version">
