--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -407,10 +407,17 @@
         justify-content: center;
         align-items: center;
       }
+
+      .donate{
+        display: none;
+      }
     }
 
     @media screen and (max-width:350px) {
       .footer-copyright {
+        display: none;
+      }
+      .donate,.donate-info{
         display: none;
       }
     }
