--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -127,7 +127,7 @@
       https://uploadbeta.com/api/pictures/random
        */
       height: 100vh;
-      background: url(https://api.btstu.cn/sjbz/?lx=dongman) no-repeat center center fixed;
+      background: url(https://acg.yanwz.cn/wallpaper/api.php) no-repeat center center fixed;
       background-size: cover;
       -moz-background-size: cover;
       -o-background-size: cover;
