--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -125,6 +125,8 @@
       /* 
       
       https://uploadbeta.com/api/pictures/random
+      https://acg.yanwz.cn/wallpaper/api.php
+      https://api.btstu.cn/sjbz/?lx=dongman
        */
       height: 100vh;
       background: url(https://acg.yanwz.cn/wallpaper/api.php) no-repeat center center fixed;
@@ -456,7 +458,7 @@
   </div>
   <!-- copyright -->
   <div class="footer-copyright">
-    <div><b>Copyright：</b><span>©2019-2020 | Jesmora</span></div>
+    <div><b>Copyright：</b><span>©2019-2020 | <a style="font-size: 1.2rem;" href="https://jkgblog.com" target="_blank" rel="noopener noreferrer">jkgblog.com</a></span></div>
     <div class="right-cp">
       <b>Special Sponsor：</b>
       <a href="https://cdn.mfyidc.com/" target="_blank" rel="noopener noreferrer" title="蜜蜂云免费CDN"> 蜜蜂云免费CDN</a> |
