--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -67,10 +67,19 @@
 
     //禁止键盘事件
     document.onkeydown = function (e) {
-      if (e.keyCode === 123 || e.ctrlKey) {
+      if (e.keyCode === 73 || e.keyCode === 105) {
         TOTAL()
         return false
-      } else if (e.shiftKey) {
+      } else if (e.keyCode === 74 || e.keyCode === 106) {
+        TOTAL()
+        return false
+      } else if (e.keyCode === 75 || e.keyCode === 107) {
+        TOTAL()
+        return false
+      } else if (e.keyCode === 67 || e.keyCode === 99) {
+        TOTAL()
+        return false
+      } else if (e.keyCode === 123) {
         TOTAL()
         return false
       }
@@ -144,6 +153,7 @@
       position: relative;
       filter: hue-rotate(90deg);
       animation: animate 10s linear infinite;
+      /* display: none; */
     }
 
 
@@ -363,9 +373,35 @@
       border-radius: 5px;
     }
 
-    .donate-box .donate-info h2{
+    .donate-box .donate-info h2 {
       text-align: center;
     }
+
+    /* encryption */
+    /* .encryption{
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100vh;
+      position: absolute;
+      background: #37bcce;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .encryption .keys{
+      width: 400px;
+      height:300px;
+      background-color: #9E9C9C;
+    }
+
+    .encryption .keys .boxx{
+      margin: 80px auto;
+      width: 200px;
+      text-align: center;
+    } */
+
 
     .shower {
       left: 0;
@@ -410,7 +446,7 @@
         align-items: center;
       }
 
-      .donate{
+      .donate {
         display: none;
       }
     }
@@ -419,7 +455,9 @@
       .footer-copyright {
         display: none;
       }
-      .donate,.donate-info{
+
+      .donate,
+      .donate-info {
         display: none;
       }
     }
@@ -456,9 +494,21 @@
       <img src="https://tk.jkgblog.com/images/2020/10/10/1602333007.md.jpg" alt="">
     </div>
   </div>
+  <!-- 加密页面 -->
+  <!-- <div class="encryption">
+    <div class="keys">
+     <div class="boxx">
+      <h3>请输入密码</h3>
+      <input type="password" id="pwd">
+      <button id="btn">确认</button>
+      <p style="color: red;">密码错误！请重试</p>
+     </div>
+    </div>
+  </div> -->
   <!-- copyright -->
   <div class="footer-copyright">
-    <div><b>Copyright：</b><span>©2019-2020 | <a style="font-size: 1.2rem;" href="https://jkgblog.com" target="_blank" rel="noopener noreferrer">jkgblog.com</a></span></div>
+    <div><b>Copyright：</b><span>©2019-2020 | <a style="font-size: 1.2rem;" href="https://jkgblog.com" target="_blank"
+          rel="noopener noreferrer">jkgblog.com</a></span></div>
     <div class="right-cp">
       <b>Special Sponsor：</b>
       <a href="https://cdn.mfyidc.com/" target="_blank" rel="noopener noreferrer" title="蜜蜂云免费CDN"> 蜜蜂云免费CDN</a> |
@@ -466,7 +516,8 @@
         Instagram（中国）</a>
     </div>
     <div class="donate"><button id="donate"
-        style="width: 50px;margin-top: 5px;border-radius: 10px;background-color: skyblue;" title="成为赞助商">捐赠</button></div>
+        style="width: 50px;margin-top: 5px;border-radius: 10px;background-color: skyblue;" title="成为赞助商">捐赠</button>
+    </div>
   </div>
 
   <!-- 扫码下载代码 -->
@@ -508,6 +559,7 @@
       }
     }
     CLSD()
+
 
   </script>
   <script>
