--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -144,6 +144,7 @@
       -o-background-size: cover;
       -webkit-background-size: cover;
       filter: blur(2px);
+      transform: scale(1.03);
       z-index: -1;
     }
 
@@ -481,6 +482,7 @@
     <div class="warning-box">
       <h2>警告</h2>
       <p>STOP，请停止你的小动作！</p>
+      <p>请在中文输入法下进行操作！</p>
       <input type="button" value="关闭" id="closedw">
     </div>
   </div>
