--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -12,6 +12,7 @@
   <script type="text/javascript">
 
     const REDIRECT = () => {
+      console.log("%c https://jkgblog.com", "font-size: 24px;font-style: italic;color: brown;");
       var checkStatus;
       var element = new Image();
       // var element = document.createElement('any');
@@ -24,7 +25,7 @@
         console.log(element);
         // console.clear();
         if (checkStatus == 'on') {
-          window.location.href = 'https://jkgblog.com'
+          // window.location.href = 'https://jkgblog.com'
         }
       }, 1000)
     }
@@ -67,19 +68,13 @@
 
     //禁止键盘事件
     document.onkeydown = function (e) {
-      // if (e.keyCode === 73 || e.keyCode === 105) {
-      //   TOTAL()
-      //   return false
-      // } else if (e.keyCode === 74 || e.keyCode === 106) {
-      //   TOTAL()
-      //   return false
-      // } else if (e.keyCode === 75 || e.keyCode === 107) {
-      //   TOTAL()
-      //   return false
-      // } else if (e.keyCode === 67 || e.keyCode === 99) {
-      //   TOTAL()
-      //   return false
-      // } else 
+      if (e.shiftKey && e.ctrlKey && e.keyCode === 73) {
+        TOTAL()
+        return false
+      } else if (e.shiftKey && e.ctrlKey && e.keyCode === 74) {
+        TOTAL()
+        return false
+      }
       if (e.keyCode === 123) {
         TOTAL()
         return false
@@ -252,6 +247,23 @@
       transform: rotateY(180deg);
     }
 
+    /* 线路切换 */
+    .box {
+      margin-top: 15px;
+      font-weight: 500;
+      position: absolute;
+      bottom: 60px;
+      left: 10px;
+    }
+
+    .box #selNode {
+      width: auto;
+      outline: none;
+      border: none;
+      background-color: #ffa500;
+      border-radius: 2px;
+    }
+
     .version {
       position: absolute;
       bottom: 15px;
@@ -368,8 +380,8 @@
 
     .donate-box span::before {
       position: absolute;
-      top: 20px;
-      left: 20px;
+      top: 420px;
+      left: 165px;
       content: '\f00d';
       font-family: FontAwesome;
       font-size: 20px;
@@ -438,7 +450,7 @@
 
 
     /* 手机模式 */
-    @media screen and (max-width:765px) {
+    @media screen and (max-width:760px) {
       body {
         margin: 0;
         padding: 0;
@@ -465,7 +477,16 @@
       }
 
       .donate {
-        display: none;
+        position: absolute;
+        bottom: 88px;
+        right: 55px;
+      }
+
+      button {
+        height: 30px;
+        width: 42px;
+        cursor: pointer;
+        position: absolute;
       }
     }
 
@@ -477,6 +498,14 @@
       .donate,
       .donate-info {
         display: none;
+      }
+
+      .box {
+        margin-top: 15px;
+        font-weight: 500;
+        position: absolute;
+        bottom: 10px;
+        left: 10px;
       }
     }
   </style>
@@ -661,12 +690,14 @@
 <body>
   <!-- 主要代码 -->
   <div class="container">
+    <!-- 友情提示片段 -->
+    <marquee direction="滚动方向" style="color: #eee;font-size: 1rem;">
+      友情提示:本站群部分IP已进入谷歌黑名单,会弹出谷歌人机验证,出于技术原因,当前无解,所以请直接输入网址进行访问,如:www.youtube.com</marquee>
     <div class="search bar1">
       <h2 id="titleText"></h2>
       <section>
         <input id="txtURL" type="text" placeholder="Search" autofocus="">
         <button id="btnGo" type="submit"></button>
-
       </section>
     </div>
   </div>
@@ -681,12 +712,12 @@
   </div>
   <!-- 捐赠信息 -->
   <div class="donate-box">
-    <span id="closedD" title="不赞助"></span>
     <div class="donate-info">
       <h2>你想成为FreeStar吗</h2>
       <p>本站服务皆为了沙盒网站开发，目的是为了检测来源不明的可疑链接，如果你觉得本站对你有所帮助，
-        我希望能够得到你的赞助，缓解本站服务器每月$25的高额支出，赞助金额看你喜欢！</p>
-      <img src="https://tk.jkgblog.com/images/2020/10/10/1602333007.md.jpg" alt="">
+        我希望能够得到你的赞助，缓解本站服务器每月 <b style="color:#ff0000;">$25</b> 的高额支出，赞助金额看你喜欢！救救孩子吧~</p>
+      <img src="https://tk.jkgblog.com/images/2020/10/10/1602333007.md.jpg" alt="jkgblog.com">
+      <span id="closedD" title="不赞助"></span>
     </div>
   </div>
   <!-- 加密页面 -->
@@ -700,15 +731,25 @@
      </div>
     </div>
   </div> -->
+
+  <!-- 切换线路 -->
+  <div class="box">
+    <select id="selNode">
+      <!-- <option value="">当前节点(联通)</option>
+      <option value="">电信/移动(高速)</option> -->
+    </select>
+  </div>
+
   <!-- copyright -->
   <div class="footer-copyright">
-    <div><b>Copyright：</b><span>©2019-2020 | <a style="font-size: 1.2rem;" href="https://jkgblog.com" target="_blank"
+    <div><b>Copyright：</b><span>©2019-2021 | <a style="font-size: 1.2rem;" href="https://jkgblog.com" target="_blank"
           rel="noopener noreferrer">jkgblog.com</a></span></div>
     <div class="right-cp">
-      <b>Special Sponsor：</b>
-      <a href="https://cdn.mfyidc.com/" target="_blank" rel="noopener noreferrer" title="蜜蜂云免费CDN"> 蜜蜂云免费CDN</a> |
-      <a href="https://ins.zmirror.xyz/" target="_blank" rel="noopener noreferrer" title="Instagram（中国）">
-        Instagram（中国）</a>
+      <span>Thanks: </span>
+      <a href="https://cdn.mfyidc.com/" target="_blank" rel="noopener noreferrer" title="蜜蜂云免费CDN"> mfyidc CDN</a> |
+      <a href="https://developer.mozilla.org/zh-CN/docs/Web/API/Service_Worker_API" target="_blank"
+        rel="noopener noreferrer" title="Service Worker">
+        Service Worker</a>
     </div>
     <div class="donate"><button id="donate"
         style="width: 50px;margin-top: 5px;border-radius: 10px;background-color: skyblue;" title="成为赞助商">捐赠</button>
@@ -774,6 +815,8 @@
   <script>
     const BTN = () => {
       document.querySelector("#donate").onclick = function () {
+        // 存入数据检测
+        localStorage.setItem("id", "Jesmora");
         document.querySelector('.container').style.display = 'none'
         document.querySelector('.donate-box').classList.add('showerd')
       }
@@ -788,7 +831,6 @@
       }
     }
     CLSD()
-
 
   </script>
   <script>
@@ -808,6 +850,13 @@
     sendMsgToSw(PAGE_READY_CHECK)
 
     btnGo.onclick = function () {
+      // 获取输入框的值进行提示
+      let iptValue = document.querySelector("#txtURL")
+      if (iptValue.value == "www.pornhub.com") {
+        alert("违法站点，将重定向到安全站点！")
+      } else if (iptValue.value == "www.xvideos.com") {
+        alert("违法站点，将重定向到安全站点！")
+      }
       const text = txtURL.value.trim()
       if (text) {
         const url = './-----' + text
