--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -25,7 +25,7 @@
         console.log(element);
         // console.clear();
         if (checkStatus == 'on') {
-          // window.location.href = 'https://jkgblog.com'
+          window.location.href = 'https://jkgblog.com'
         }
       }, 1000)
     }
@@ -875,21 +875,21 @@
       const [cmd, msg] = e.data
 
       switch (cmd) {
-        case SW_CONF_RETURN:
-          conf = msg
-          showConf()
-          break
+      case SW_CONF_RETURN:
+        conf = msg
+        showConf()
+        break
 
-        case SW_CONF_CHANGE:
-          conf = msg
-          updateSelected()
-          break
+      case SW_CONF_CHANGE:
+        conf = msg
+        updateSelected()
+        break
 
-        case SW_READY:
-          console.log('sw ready')
-
-          sendMsgToSw(PAGE_CONF_GET)
-          break
+      case SW_READY:
+        console.log('sw ready')
+        showIcons()
+        sendMsgToSw(PAGE_CONF_GET)
+        break
       }
     }
 
@@ -897,6 +897,12 @@
       txtURL.value = err
     }
 
+    selNode.onchange = function() {
+      const item = this.options[this.selectedIndex]
+      const node = item.value
+      conf.node_default = node
+      sendMsgToSw(PAGE_CONF_SET, conf)
+    }
 
     function sendMsgToSw(cmd, val) {
       const ctl = sw.controller
@@ -907,15 +913,29 @@
       ctl.postMessage([cmd, val])
     }
 
-    function showIcons() {
-      list.innerHTML = SITE_LIST.map(v => {
-        let [id, url] = v
-        url = url || `www.${id}.com/`
-        return `\
-<a rel="noopener noreferrer" href=./-----https://${url}>\
-<img width=128 height=128 src=__sys__/assets/ico/${id}.png></a>`
-      }).join('')
-    }
+    // const SITE_LIST = [
+    //   ['google', ''],
+    //   ['youtube', ''],
+    //   ['twitter', 'twitter.com/google'],
+    //   ['flickr', ''],
+    //   ['quora', 'www.quora.com/topic/JavaScript-programming-language'],
+    //   ['twitch', 'www.twitch.tv/'],
+    //   ['reddit', ''],
+    //   ['wiki', 'zh.wikipedia.org/'],
+    //   ['gist', 'gist.github.com/'],
+    //   ['facebook', 'facebook.com/Google/'],
+    //   ['blogger', ''],
+    // ]
+
+//     function showIcons() {
+//       list.innerHTML = SITE_LIST.map(v => {
+//         let [id, url] = v
+//         url = url || `www.${id}.com/`
+//         return `\
+// <a rel="noopener noreferrer" href=./-----https://${url}>\
+// <img width=128 height=128 src=__sys__/assets/ico/${id}.png></a>`
+//       }).join('')
+//     }
 
     function addNodeItem(id, text) {
       const optEl = document.createElement('option')
