--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -258,6 +258,7 @@
 
     .box #selNode {
       width: 110px;
+      height: 25px;
       outline: none;
       border: none;
       background-color: #ffa500;
@@ -700,6 +701,11 @@
         <button id="btnGo" type="submit"></button>
       </section>
     </div>
+
+    <!-- 切换线路 -->
+    <div class="box">
+      <select id="selNode"></select>
+    </div>
   </div>
   <!-- 非法操作警告 -->
   <div class="warning">
@@ -731,11 +737,6 @@
      </div>
     </div>
   </div> -->
-
-  <!-- 切换线路 -->
-  <div class="box">
-    <select id="selNode"></select>
-  </div>
 
   <!-- copyright -->
   <div class="footer-copyright">
@@ -869,21 +870,21 @@
       const [cmd, msg] = e.data
 
       switch (cmd) {
-      case SW_CONF_RETURN:
-        conf = msg
-        // showConf()
-        break
+        case SW_CONF_RETURN:
+          conf = msg
+          // showConf()
+          break;
 
-      case SW_CONF_CHANGE:
-        conf = msg
-        updateSelected()
-        break
+        case SW_CONF_CHANGE:
+          conf = msg
+          updateSelected()
+          break;
 
-      case SW_READY:
-        console.log('sw ready')
-        // showIcons()
-        sendMsgToSw(PAGE_CONF_GET)
-        break
+        case SW_READY:
+          console.log('sw ready')
+          // showIcons()
+          sendMsgToSw(PAGE_CONF_GET)
+          break;
       }
     }
 
@@ -891,7 +892,7 @@
       txtURL.value = err
     }
 
-    selNode.onchange = function() {
+    selNode.onchange = function () {
       const item = this.options[this.selectedIndex]
       const node = item.value
       conf.node_default = node
@@ -921,15 +922,15 @@
     //   ['blogger', ''],
     // ]
 
-    function showIcons() {
-      list.innerHTML = SITE_LIST.map(v => {
-        let [id, url] = v
-        url = url || `www.${id}.com/`
-        return `\
-<a rel="noopener noreferrer" href=./-----https://${url}>\
-<img width=128 height=128 src=__sys__/assets/ico/${id}.png></a>`
-      }).join('')
-    }
+//     function showIcons() {
+//       list.innerHTML = SITE_LIST.map(v => {
+//         let [id, url] = v
+//         url = url || `www.${id}.com/`
+//         return `\
+// <a rel="noopener noreferrer" href=./-----https://${url}>\
+// <img width=128 height=128 src=__sys__/assets/ico/${id}.png></a>`
+//       }).join('')
+//     }
 
     function addNodeItem(id, text) {
       const optEl = document.createElement('option')
