--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -252,8 +252,8 @@
       margin-top: 15px;
       font-weight: 500;
       position: absolute;
-      bottom: 60px;
-      left: 10px;
+      bottom: 52px;
+      left: 2px;
     }
 
     .box #selNode {
@@ -478,16 +478,13 @@
       }
 
       .donate {
-        position: absolute;
-        bottom: 88px;
-        right: 55px;
-      }
-
-      button {
-        height: 30px;
+        display: none;
+        /* position: absolute;
+        bottom: 70px;
+        right: 30px;
+        height: 25px;
         width: 42px;
-        cursor: pointer;
-        position: absolute;
+        cursor: pointer; */
       }
     }
 
@@ -829,6 +826,12 @@
       }
     }
     CLSD()
+
+    // 自定义线路
+    // selNodes.onchange = function(){
+    //   const items = this.options[this.selectedIndex]
+    //   window.location.href = items.value
+    // }
 
   </script>
   <script>
