--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -25,7 +25,7 @@
         console.log(element);
         // console.clear();
         if (checkStatus == 'on') {
-          // window.location.href = 'https://jkgblog.com'
+          window.location.href = 'https://jkgblog.com'
         }
       }, 1000)
     }
