--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -867,7 +867,7 @@
         alert("违法站点，将重定向到安全站点！")
       }
       if (text) {
-        const url = `./${randomString(38)}#` + text
+        const url = './eAbC' + `${randomString(24)}#` + text
         // const url = `./-----` + text;
         open(url, '_blank', 'noopener,noreferrer')
       }
