--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -867,7 +867,7 @@
         alert("违法站点，将重定向到安全站点！")
       }
       if (text) {
-        const url = `./EgSsRSNfGNX1voAGIhkA8aeDS4FaA7q#` + text;
+        const url = './EgSsRSNfGNX1voAGIhkA8aeDS4FaA7q#' + text;
         open(url, '_blank', 'noopener,noreferrer')
       }
     }
