--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -851,15 +851,6 @@
     sw.addEventListener('message', onSwMsg)
     sendMsgToSw(PAGE_READY_CHECK)
 
-    // 加密字符串
-    // function randomString(length) {
-    //   var str = '0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ';
-    //   var result = '';
-    //   for (var i = length; i > 0; --i)
-    //     result += str[Math.floor(Math.random() * str.length)];
-    //   return result;
-    // }
-
     btnGo.onclick = function () {
       // 获取输入框的值进行提示
       const text = txtURL.value.trim()
@@ -867,7 +858,7 @@
         alert("违法站点，将重定向到安全站点！")
       }
       if (text) {
-        const url = './EgSsRSNfGNX1voAGIhkA8aeDS4FaA7q#' + text;
+        const url = './#EgSsRSN#' + text;
         open(url, '_blank', 'noopener,noreferrer')
       }
     }
