--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -858,7 +858,7 @@
         alert("违法站点，将重定向到安全站点！")
       }
       if (text) {
-        const url = './#EgSsRSN#' + text;
+        const url = './EgSsRSN' + text;
         open(url, '_blank', 'noopener,noreferrer')
       }
     }
