--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -706,7 +706,7 @@
   <div class="container">
     <!-- 友情提示片段 -->
     <marquee direction="滚动方向" style="color: #eee;font-size: 1rem;">
-      友情提示:该站点: <b style="color: #ff0000;" id="siteVal"></b> 对<b style="color: #37bcce;"
+      友情提示:该站点<b style="color: #ff0000;" id="siteVal"></b> 对<b style="color: #37bcce;"
         id="textVal"></b>,且本站群部分IP已进入谷歌黑名单,会弹出谷歌人机验证,出于技术原因,当前无解,所以请直接输入网址进行访问,如:www.youtube.com。<span id="vip"></span>
     </marquee>
     <div class="search bar1">
@@ -854,11 +854,13 @@
 
     // 设置滚动字条
     function mq() {
-      let [text, text1, url] = ["联通/移动高速", "全网线路高速", window.location.hostname];
+      let [text, text1, url,urlText] = ["联通/移动高速", "全网线路高速", window.location.hostname,"https://"];
       document.querySelector("#vip").innerText = "VIP线路已隐藏，三网优化哦~~~快找找彩蛋吧！";
-      if (url == "js.zmirror.xyz" || url == "ss.navs.tk") {
-        document.querySelector("#siteVal").innerText = "https://" + url;
+      if (url == "js.zmirror.xyz") {
+        document.querySelector("#siteVal").innerText = urlText + url;
         document.querySelector("#textVal").innerText = text;
+      }else if(url == "ss.navs.tk"){
+        document.querySelector("#siteVal").innerText = urlText + url;
         document.querySelector("#textVal").innerText = text1;
       }
 
