--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -478,9 +478,7 @@
       }
 
       .footer-copyright {
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        display: none;
       }
 
       .donate {
@@ -497,6 +495,11 @@
       .deng-box1 {
         display: none;
       }
+
+      marquee{
+        display: none;
+      }
+
     }
 
     @media screen and (max-width:350px) {
@@ -519,6 +522,10 @@
 
       .deng-box,
       .deng-box1 {
+        display: none;
+      }
+
+      marquee{
         display: none;
       }
     }
