--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -441,6 +441,45 @@
       text-align: center;
     } */
 
+    /* 弹窗警告 */
+    /* .warnText { */
+      /* width: 100%;
+      height: 100vh;
+      position: absolute; */
+      /* background-color: #9E9C9C; */
+      /* background: #00d2ff; */
+      /* fallback for old browsers */
+      /* background: -webkit-linear-gradient(to right, #928DAB, #00d2ff); */
+      /* Chrome 10-25, Safari 5.1-6 */
+      /* background: linear-gradient(to right, #928DAB, #00d2ff); */
+      /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+    /* } */
+
+    /* .warnText::before {
+      content: '';
+      width: 100%;
+      height: 100vh;
+      transform: scale(1.03);
+      z-index: 1000;
+    }
+
+    .warnText .warnBox {
+      position: absolute;
+      width: 350px;
+      height: 450px;
+      border: 1px red solid;
+      text-align: center;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+
+    .warnText .warnBox .warnTitle{
+      width: auto;
+      height: 40px;
+      background-color: #fff0f7;
+    } */
 
     .shower {
       left: 0;
@@ -498,7 +537,7 @@
         display: none;
       }
 
-      marquee{
+      marquee {
         display: none;
       }
 
@@ -527,14 +566,14 @@
         display: none;
       }
 
-      marquee{
+      marquee {
         display: none;
       }
     }
   </style>
 
   <!-- 灯笼 -->
-  <style>
+  <!-- <style>
     .deng-box {
       position: fixed;
       top: -40px;
@@ -707,7 +746,7 @@
         -webkit-transform: rotate(-10deg)
       }
     }
-  </style>
+  </style> -->
 </head>
 
 <body>
@@ -716,7 +755,7 @@
     <!-- 友情提示片段 -->
     <marquee direction="滚动方向" style="color: #eee;font-size: 1rem;">
       友情提示:该站点<b style="color: #ff0000;" id="siteVal"></b> 对<b style="color: #37bcce;"
-        id="textVal"></b>,且本站群部分IP已进入谷歌黑名单,会弹出谷歌人机验证,出于技术原因,当前无解,所以请直接输入网址进行访问,如:www.youtube.com。<span id="vip"></span>
+        id="textVal"></b>,且本站群部分IP已进入谷歌黑名单,会弹出谷歌人机验证,出于技术原因,当前无解,所以请直接输入网址进行访问(重点)!如:www.youtube.com。<span id="vip"></span>
     </marquee>
     <div class="search bar1">
       <h2 id="titleText"></h2>
@@ -750,6 +789,19 @@
       <span id="closedD" title="不赞助"></span>
     </div>
   </div>
+
+  <!-- 弹出警告 -->
+  <!-- <div class="warnText">
+    <div class="warnBox">
+      <div class="warnTitle">
+        <h3>友情提示</h3>
+      </div>
+      <div class="warnBody">
+
+      </div>
+    </div>
+  </div> -->
+
   <!-- 加密页面 -->
   <!-- <div class="encryption">
     <div class="keys">
@@ -768,7 +820,7 @@
           rel="noopener noreferrer">jkgblog.com</a></span></div>
     <div class="right-cp">
       <span>Thanks: </span>
-      <a href="https://cdn.mfyidc.com/" target="_blank" rel="noopener noreferrer" title="蜜蜂云免费CDN"> mfyidc CDN</a> |
+      <a href="https://cdn.mfyidc.com/" target="_blank" rel="noopener noreferrer" title="蜜蜂云CDN"> mfyidc CDN</a> |
       <a href="https://developer.mozilla.org/zh-CN/docs/Web/API/Service_Worker_API" target="_blank"
         rel="noopener noreferrer" title="Service Worker">
         Service Worker</a>
@@ -779,7 +831,7 @@
 
 
     <!-- 灯笼1 -->
-    <div class="deng-box">
+    <!-- <div class="deng-box">
       <div class="deng">
         <div class="xian"></div>
         <div class="deng-a">
@@ -792,10 +844,10 @@
           <div class="shui-b"></div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- 灯笼2 -->
-    <div class="deng-box1">
+    <!-- <div class="deng-box1">
       <div class="deng">
         <div class="xian"></div>
         <div class="deng-a">
@@ -808,7 +860,7 @@
           <div class="shui-b"></div>
         </div>
       </div>
-    </div>
+    </div> -->
 
   </div>
 
@@ -863,12 +915,12 @@
 
     // 设置滚动字条
     function mq() {
-      let [text, text1, url,urlText] = ["联通/移动高速", "全网线路高速", window.location.hostname,"https://"];
+      let [text, text1, url, urlText] = ["联通/移动高速", "全网线路高速", window.location.hostname, "https://"];
       document.querySelector("#vip").innerText = "VIP线路已隐藏，三网优化哦~~~快找找彩蛋吧！";
       if (url == "js.zmirror.xyz") {
         document.querySelector("#siteVal").innerText = urlText + url;
         document.querySelector("#textVal").innerText = text;
-      }else if(url == "ss.navs.tk"){
+      } else if (url == "ss.navs.tk") {
         document.querySelector("#siteVal").innerText = urlText + url;
         document.querySelector("#textVal").innerText = text1;
       }
